[gd_scene load_steps=4 format=3 uid="uid://bvtoyjvoacbhf"]

[ext_resource type="PackedScene" uid="uid://cml5bwbd7526v" path="res://scenes/heart_gui.tscn" id="1_2508k"]
[ext_resource type="Script" path="res://scripts/heartscontainer.gd" id="1_dd3us"]
[ext_resource type="PackedScene" uid="uid://dm5ad1y5ud4bg" path="res://scenes/heal_meter.tscn" id="2_2odi7"]

[node name="HeartsContainer" type="HBoxContainer"]
offset_right = 215.0
offset_bottom = 73.0
theme_override_constants/separation = 18
script = ExtResource("1_dd3us")

[node name="HealMeter" parent="." instance=ExtResource("2_2odi7")]
layout_mode = 2

[node name="HeartGUI" parent="." instance=ExtResource("1_2508k")]
layout_mode = 2

[node name="HeartAnimation" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="HeartAnimation" to="." method="_on_heart_animation_timeout"]
